# cat_detection

./: .env.example  .gitignore  Dockerfile.pipeline  README.md  docker-compose.cvat.yml  docker-compose.yml  justfile  pyproject.toml
dags/: retrain_dag.py
grafana/provisioning/dashboards/: dashboard.json  dashboard.yml
grafana/provisioning/datasources/: vm.yml
scripts/: assign_labels_from_folders.py  auto_crop_cats.py  auto_label.py  build_cat_intervals.py  build_videos_index.py  deduplicate_frames.py  export_cat_crops.py  extract_interval_frames.py  group_crops.py  import_cvat_annotations.py  live_detect.py  metrics.py  pipeline.py  pipeline_db.py  predict_cat.py  scan_cat_detections.py  scatter_groups.py  train_classifier.py
